2019-09-28 belangeo <belangeo@gmail.com>

    * Expr API: let statment can now store a complex number.

2019-09-19 belangeo <belangeo@gmail.com>

    * Added a DC blocker inside the feedback loop of Harmonizer object.

2019-09-11 belangeo <belangeo@gmail.com>

    * Added new object: Binaural, 3D stereo spatialization.

2019-09-11 belangeo <belangeo@gmail.com>

    * Added a clear() method to Mixer object to delete all inputs at once.

2019-09-09 belangeo <belangeo@gmail.com>

    * Fixed setting value of ControlSlider from national keyboard layout.

2019-09-03 belangeo <belangeo@gmail.com>

    * Audio server falls back to playback-only mode if jack server has no input ports.

2019-07-11 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.0.

2019-06-12 belangeo <belangeo@gmail.com>

    * EPyo: Fix search ctrl behaviour in the documentation window.

2019-06-05 belangeo <belangeo@gmail.com>

    * Better handling of bad code when reading file in enbedded pyo.

2019-06-02 belangeo <belangeo@gmail.com>

    * Added a clear() method to Linseg and Expseg objects.

2019-05-14 belangeo <belangeo@gmail.com>

    * Added computer keyboard bindings when the Notein's keyboard widget has the focus.

2019-02-22 belangeo <belangeo@gmail.com>

    * Fader and Adsr now send a trigger at the end of the envelope.

2019-02-22 belangeo <belangeo@gmail.com>

    * CallAfter's time and arg arguments can be changed dynamically.

2019-01-24 belangeo <belangeo@gmail.com>

    * Jack audio backend does not ignore duplex value anymore.

2019-01-24 belangeo <belangeo@gmail.com>

    * Added two arithmetic objects: Div and Sub.

2019-01-22 belangeo <belangeo@gmail.com>

    * Changed PyoObjectBase's method preventAutoStart() for all AutoStart(switch).
    
2019-01-11 belangeo <belangeo@gmail.com>

    * Added setStopDelay method to PyoObjectBase class.

2019-01-09 belangeo <belangeo@gmail.com>

    * Added examples about multirate processing/synthesis.

2019-01-08 belangeo <belangeo@gmail.com>