@@ -114,9 +114,13 @@ Input and Output signals
 
 User has access to the last buffer size of input and output samples. 
 
-To use samples from past input, use $x[n] notation, where n is the position
-from the current time. $x[0] is the current input, $x[-1] is the previous
-one and $x[-buffersize] is the last available input sample.
+To use samples from past inputs, use $x0[n] notation, where 0 is the first
+audio stream ($x1[0] would retrieve the second audio stream) and n is the
+position from the current time. $x0[0] is the current input sample, $x0[-1]
+is the previous one and $x0[-buffersize] is the last available input sample.
+
+The first audio stream can also simply be named $x[0] ($x[0] is the same as
+$x0[0]).
 
 To use samples from past output, use $y[n] notation, where n is the position
 from the current time. $y[-1] is the previous output and $y[-buffersize] is 
@@ -127,6 +131,10 @@ Here an example of a first-order IIR lowpass filter expression::
     // A first-order IIR lowpass filter
     + $x[0] (* (- $y[-1] $x[0]) 0.99)
 
+A simple ring-modulation expression::
+
+    // ring-modulation between the first two input signals
+    * $x[0] $x1[0]
 
 Defining custom functions
 -------------------------
