@@ -1,3 +1,7 @@
+2019-09-29 belangeo <belangeo@gmail.com>
+
+    * Expr API: Expr now can handle multiple input sources.
+
 2019-09-28 belangeo <belangeo@gmail.com>
 
     * Expr API: let statment can now store a complex number.
